--- a/index.html
+++ b/index.html
@@ -9,8 +9,80 @@
 </head>
 <body>
     <!-- ======== header-area ======== -->
-    <section class="header-area">
-        <h1>I am a rashed</h1>
+    <section class="header-area flex">
+        <div class="half-area">
+            <h1><span>Skip</span> The Diet, <br>Just Eat Healthy <br>With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <a href="#">order Food</a>
+        </div>
+        <div class="half-area">
+            <img src="./img/1.png" alt="" class="myImg">
+        </div>
+    </section>
+
+    <!-- ===== about-area ==== -->
+    <section class="about-area flex">
+        <div class="half-area">
+            <img src="./img/2nd.png" alt="" class="foodImg">
+        </div>
+        <div class="half-area">
+            <h1>About Me
+            </h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra,vel</p>
+            <a href="#">Contact me</a>
+        </div>
+    </section>
+
+    <!-- ===== recipies-area ====== -->
+    <section class="recipies-area">
+        <h1>My recipies</h1>
+        <p class="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the
+            1500s.</p>
+        <div class="card flex">
+            <div class="box">
+                <img src="./img/Project Cover.jpg" alt="">
+                <h2>Recipie Title</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s.</p>
+            </div>
+            <div class="box">
+                <img src="./img/Project Cover.jpg" alt="">
+                <h2>Recipie Title</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s.</p>
+            </div>
+
+        </div>
+    </section>
+    <!-- ======== youtube-area ======= -->
+    <section class="youtube-area">
+        <div class="card flex">
+            <div class="box">
+                <h2>700k</h2>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div class="box">
+                <h2>2.4m</h2>
+                <p>Instagram Followers</p>
+            </div>
+            <div class="box">
+                <h2>100k</h2>
+                <p>Dribbble Shot Likes</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- ======== footer-area ======== -->
+    <section class="footer-area">
+        <h1><span>Eat</span>Fresh</h1>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
     </section>
 </body>
 </html>
